# path-finder

./: .clang-format  CMakeLists.txt  README.md  sample.txt
src/: arguments.cpp  arguments.hpp  error.cpp  error.hpp  field.cpp  field.hpp  file.cpp  file.hpp  log.hpp  main.cpp  result.hpp  simple-buffer.hpp  string-utils.hpp
